<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorToolBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleMarginStart="32dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="320dp"
            app:srcCompat="@drawable/main_golf_field"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_golf_ball"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/recorder"
            app:tint="@color/black_90"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cameraImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textColor="@color/main_title_color"
            android:gravity="center"
            android:text="@string/menu_recorder"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/folderImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/cameraImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_golf_ball"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/videolist"
            app:tint="@color/black_90"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/folderImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textColor="@color/main_title_color"
            android:gravity="center"
            android:text="@string/menu_videolist"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/helpImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/folderImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_golf_ball"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/help"
            app:tint="@color/black_90"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helpImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/menu_help"
            android:gravity="center"
            android:textColor="@color/main_title_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="@string/banner_size"
        ads:adUnitId="@string/banner_unit_id" />

</LinearLayout>
