<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorToolBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleMarginStart="32dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/main_golf_hole"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/main_golf_pose"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="154dp"
            android:adjustViewBounds="false"
            android:background="@drawable/ic_circle_white"
            android:backgroundTint="#E60000B4"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_videocam_black"
            app:tint="@color/black_90"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cameraImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="145dp"
            android:gravity="center"
            android:text="@string/menu_recorder"
            android:textColor="@color/black_90"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/folderImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/cameraImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="204dp"
            android:background="@drawable/ic_circle_white"
            android:backgroundTint="#E60000B4"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_videolibrary_black"
            app:tint="@color/black_90"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/folderImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="194dp"
            android:gravity="center"
            android:text="@string/menu_videolist"
            android:textColor="@color/black_90"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/helpImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/folderImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="134dp"
            android:background="@drawable/ic_circle_white"
            android:backgroundTint="#E60000B4"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_help_black"
            app:tint="@color/black_90"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helpImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="124dp"
            android:gravity="center"
            android:text="@string/menu_help"
            android:textColor="@color/black_90"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="@string/banner_size"
        ads:adUnitId="@string/banner_unit_id" />

</LinearLayout>
